[NWPS-1234] - Fixed sort drop down alignment for mobile

--- a/app/assets/hee/blocks/furniture/collections/hee-listing/_listing.scss
+++ b/app/assets/hee/blocks/furniture/collections/hee-listing/_listing.scss
@@ -1,18 +1,13 @@
 .hee-listing {
   .hee-listing__summary {
     border-bottom: 1px solid $color_nhsuk-grey-4;
-
-    @include mq($from: desktop) {
-      display: flex;
-      flex-flow: row wrap;
-      justify-content: space-between;
-    }
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
   }
 
   .hee-listing__count {
-    @include mq($from: desktop) {
-      align-self: center;
-    }
+    align-self: center;
 
     h2 {
       margin-bottom: 0;
